example3/nw.tf
resource "aws_vpc" "example" {
    cidr_block           = "10.0.0.0/16"
    enable_dns_support   = true
    enable_dns_hostnames =true
    
    tags = {
        Name = "terraform example"
    }
}

resource "aws_subnet" "public" {
    vpc_id                  = aws_vpc.example.id
    cidr_block              = "10.0.0.0/24"
    map_public_ip_on_launch = true
    availability_zone       = "ap-northeast-1a"
}

resource "aws_internet_gateway" "example" {
    vpc_id = aws_vpc.example.id
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.example.id
}

resource "aws_route" "public" {
    route_table_id         = aws_route_table.public.id
    gateway_id             = aws_internet_gateway.example.id
    destination_cidr_block = "0.0.0.0/0"
}

resource "aws_route_table_association" "public" {
    subnet_id = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
}

resource = "aws_subnet" "private" {
    vpc_id                  = aws_vpc.example.id
    cidr_block              = "10.0.64.0/24"
    availability_zone       = "ap-northeast-1a"
    map_public_ip_on_launch = false 
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.example.id
}

resource "aws_route_table_association" "private" {
    subnet_id      = aws_subnet.private.id
    route_table_id = aws_route_table.private.id
}
